# Gerador_de_mensagem

./: README.md  pyproject.toml
app/: main.py  main_pandas.py  mensagem_desconto.html
src/: desconto.csv
