[tool.poetry]
name = "msgaut"
version = "0.1.0"
description = ""
authors = ["Herbert Souto <herbert-93@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
