[tool.poetry]
name = "gerador_de_mensagem"
version = "0.1.0"
description = ""
authors = ["Herbert Souto <herbert-93@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pandas = "^2.2.2"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
